feat(instrumentation,di): sentry, logfire, dependency injection
